[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unzip-http"
version = "0.6"
description = "extract files from .zip files over http without downloading entire archive"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["http", "zip", "unzip"]
authors = [{name = "Saul Pwanson"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
dependencies = ["urllib3"]

[project.urls]
Homepage = "https://github.com/saulpw/unzip-http"

[project.scripts]
unzip_http = "unzip_http:main"

[tool.setuptools]
py-modules = ["unzip_http"]
